# Utilogeny

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeSettings.json  Qtilogeny.vcxproj_old  THIRD_PARTY  THIRD_PARTY.txt  Utilogeny.sln  Utilogeny.vcxproj  Utilogeny.vcxproj.filters  Utilogeny.vcxproj_old
lib/bgfx/: CMakeLists.txt
lib/glew/: CMakeLists.txt
lib/glfw/: CMakeLists.txt
lib/gtest/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/sdl2/: CMakeLists.txt
lib/vulkan/: CMakeLists.txt
source/core/: CMakeLists.txt  Utilogeny.vcxproj  besthitmap.h  constable.h  cpuinfo.cpp  cpuinfo.h  datafile.cpp  datafile.h  exceptions.cpp  exceptions.h  md5.cpp  md5.h  platform.cpp  platform.h  precomp.cpp  precomp.h  randomnumbers.cpp  randomnumbers.h  smarttimer.h  threading.h  utilities.cpp  utilities.h  utilogeny.cpp  utilogeny.h  version.h
source/core/audio/: audio_backend_generic.h  audio_test.cpp  audio_test.h
source/core/commandcontroller/: commandcontroller.cpp  commandcontroller.h  commandqueue.cpp  commandqueue.h  consolecontroller.cpp  consolecontroller.h  typedefs.h
source/core/console/: NOTES
source/core/console/rang/: rang.h
source/core/crypto/: NOTES
source/core/lib/: CMakeLists.txt  besthitmap.h  constable.h  cpuinfo.cpp  cpuinfo.h  datafile.cpp  datafile.h  exceptions.cpp  exceptions.h  md5.cpp  md5.h  platform.cpp  precomp.cpp  precomp.h  randomnumbers.cpp  randomnumbers.h  smarttimer.h  threading.h  utilities.cpp  utilities.h  utilogeny.cpp  utilogeny.h  version.h
source/core/lib/audio/: audio_backend_generic.h
source/core/lib/commandcontroller/: commandcontroller.cpp  commandcontroller.h  commandqueue.cpp  commandqueue.h  consolecontroller.cpp  consolecontroller.h  typedefs.h
source/core/lib/graphics/: color.h
source/core/lib/properties/: property.h  property_container.h  property_new_variant.h  synopsis.txt
source/core/lib/re2/: Version.txt
source/core/lib/re2/re2/: bitmap256.h  bitstate.cc  compile.cc  dfa.cc  filtered_re2.cc  filtered_re2.h  mimics_pcre.cc  nfa.cc  onepass.cc  (+26 more)
source/core/math/: NOTES
source/core/properties/: entities.txt  property.cpp  property.h  property_container.cpp  property_new_variant.h  property_old_variant.h  property_test.cpp  synopsis.txt
source/core/re2/re2/: bitmap256.h  bitstate.cc  compile.cc  dfa.cc  filtered_re2.cc  filtered_re2.h  mimics_pcre.cc  nfa.cc  onepass.cc  parse.cc  perl_groups.cc  pod_array.h  prefilter.cc  prefilter.h  prefilter_tree.cc  prefilter_tree.h  prog.cc  prog.h  re2.cc  re2.h  regexp.cc  regexp.h  set.cc  set.h  simplify.cc  sparse_array.h  sparse_set.h  stringpiece.cc  stringpiece.h  tostring.cc  unicode_casefold.cc  unicode_casefold.h  unicode_groups.cc  unicode_groups.h  walker-inl.h
source/core/re2/util/: logging.h  mix.h  mutex.h  rune.cc  strutil.cc  strutil.h  utf.h
source/core/sdl/: sdl_integration.h
source/core/sdl/freeserf/: audio-sdlmixer.cc  audio-sdlmixer.h  audio.cc  audio.h  data.cc  data.h  event_loop-sdl.cc  event_loop-sdl.h  event_loop.cc  event_loop.h  gfx.cc  gfx.h  sprite-file-sdl.cc  sprite-file.h  video-sdl.cc  video-sdl.h  video.cc  video.h
source/core/string/: string.h
source/core/test/: CMakeLists.txt  precomp.cpp  precomp.h  test.cpp
source/gui/: Application.cpp  Application.h  CMakeLists.txt  ExecutableObject.h  ExecutableObjectImpl.h  ExtendedException.cpp  Settings.cpp  main.cpp
source/gui/event/polym/: Msg.cpp
source/gui/examples/: CMakeLists.txt  example1.cpp
source/gui/lib/: CMakeLists.txt  ExecutableObject.cpp  ExecutableObjectImpl.cpp  ExtendedException.h  Object.cpp  Object.h  Settings.h
source/gui/lib/event/: Event.h  Message queue options.txt
source/gui/lib/renderer/: ImGUIManager.h
source/gui/lib/widget/: widget.cpp
source/gui/lib/window/: GLFWWindowImpl.cpp  SDLWindowImpl.cpp  WindowImpl.h  WindowingSystem.cpp
source/gui/notes/: ChatGPT.py  ChatGPT2.py  ChatGPT3.py  ChatGPT4.py  ChatGPT5.py  Doodad overview.ai  ReadMe.txt  ToDo.txt  project_summary_20230322_203304.txt  project_summary_20230326_195653.txt
source/gui/renderer/: Color.cpp  Color.h  ImGUIManager.cpp  Renderer.cpp  Renderer.h  RendererTypes.cpp  RendererTypes.h
source/gui/renderer/bgfx/: BgfxRenderer.cpp  BgfxRenderer.h  BgfxRendererContext.cpp  BgfxRendererContext.h  BgfxRendererImpl.cpp  BgfxRendererImpl.h
source/gui/renderer/opengl/: OpenGLRenderer.cpp  OpenGLRenderer.h
source/gui/renderer/sdl/: SDLRenderer.cpp  SDLRenderer.h
source/gui/renderer/vulkan/: VulkanRenderer.h
source/gui/test/: CMakeLists.txt  test.cpp
source/gui/widget/: readme.txt  widget.h
source/gui/window/: GLFWWindowImpl.cpp  GLFWWindowImpl.h  SDLWindowImpl.cpp  SDLWindowImpl.h  Window.cpp  Window.h  WindowImpl.cpp  WindowingSystem.h
source/physics/: CMakeLists.txt  README.md
source/physics/core/: CMakeLists.txt  precomp.cpp  precomp.h
source/physics/core/interface/: object_interface.cpp  object_interface.h  universe_interface.cpp  universe_interface.h
source/physics/core/physics/: relativity.h
source/physics/core/unitlib/: constants.h  units.cpp  units.h
source/physics/lib/: CMakeLists.txt  precomp.cpp  precomp.h
source/physics/lib/forces/: forces.cpp  forces.h  gravity.cpp  gravity.h  property.cpp  property.h
source/physics/lib/helpers/: bounding.cpp  bounding.h  ntree.decl.h  ntree.h  octree.h
source/physics/lib/interface/: object_interface.cpp  universe_interface.cpp  universe_interface.h
source/physics/lib/objects/: atom.h  frame.cpp  frame.h  object.cpp  object.h  object_compound.cpp  object_compound.h  origin.h  particle.cpp  particle.h  particleclass.cpp  particleclass.h
source/physics/lib/relativity/: relativity.h
source/physics/lib/unitlib/: constants.h  units.cpp  units.h
source/physics/lib/universe/: generators.h  universe.cpp  universe.h
source/physics/lib/vector/: vector.h
source/physics/test/: CMakeLists.txt  test.cpp  vector.cpp
source/test/: CMakeLists.txt  UtilogenyTest.vcxproj  pch.cpp  pch.h  test.cpp
source/test/x64/Debug/: UtilogenyTest.exe.recipe  UtilogenyTest.vcxproj.FileListAbsolute.txt
(+1822 files in other folders)
